Bizfi Production/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Generate_Sales_Rep_Scorecard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for checking active user for generating scorecard.</description>
        <inlineHelpText>If checked, the user will have a scorecard generated at midnight daily.</inlineHelpText>
        <label>Generate Sales Rep Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmblre__Current_Workload__c</fullName>
        <description>Actual workload for the Sales Representative.</description>
        <label>Current Workload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cmblre__Lead_Routing_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Reassignment Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmblre__Maximum_Workload__c</fullName>
        <description>Maximum possible workload for the Sales Representative.</description>
        <inlineHelpText>Maximum possible workload for the Sales Representative.</inlineHelpText>
        <label>Maximum Workload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cmblre__Reached_Quota__c</fullName>
        <formula>AND(cmblre__Current_Workload__c &gt; 0, cmblre__Maximum_Workload__c &gt; 0, cmblre__Current_Workload__c &gt;= cmblre__Maximum_Workload__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workload Above Maximum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sys_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Frozen_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sys_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>